# ecfxa

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: docs.yml
calc/: ecf_4xmm.ipynb  ecf_erosita.ipynb  ecf_swift.ipynb  ecf_xmm.ipynb  xmm_arfgen.ipynb  xmm_arfgen.py
docs/: examples.ipynb
src/ecfxa/: __init__.py  ecfs.py  erosita.py  singleton.py  swift.py  xmm.py
